--- a/believethehype-wallet-connect/docker-compose.yml
+++ b/believethehype-wallet-connect/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 58000
      
   server:
-    image: ghcr.io/getalby/nostr-wallet-connect:main-5df99a9
+    image: ghcr.io/believethehype/nostr-wallet-connect:lnbits-support-8ac1d68
     init: true
     environment:
       RELAY: "wss://relay.damus.io"
