--- a/believethehype-wallet-connect/docker-compose.yml
+++ b/believethehype-wallet-connect/docker-compose.yml
@@ -5,20 +5,22 @@ services:
       # The format here is: <app-id>_<docker-service-name>_1
       APP_HOST: believethehype-wallet-connect_server_1
       APP_PORT: 58000
+   
      
   server:
     image: ghcr.io/believethehype/nostr-wallet-connect:lnbits-support-8ac1d68
     init: true
+    volumes:
+      - ${APP_DATA_DIR}/data:/data
+      - ${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
     environment:
       RELAY: "wss://relay.damus.io"
       LN_BACKEND_TYPE: "LND"
       LND_ADDRESS: https://$APP_LIGHTNING_NODE_IP:$APP_LIGHTNING_NODE_GRPC_PORT/
-      LND_MACAROON_FILE: /home/umbrel/umbrel/app-data/lightning/data/lnd/data/chain/bitcoin/mainnet/admin.macaroon ~/Downloads/admin.macaroon
-      LND_CERT_FILE: /home/umbrel/umbrel/app-data/lightning/data/lnd/tls.cert
+      LND_CERT_FILE: "/lnd/tls.cert"
+      LND_MACAROON_FILE: "/lnd/data/chain/bitcoin/$APP_BITCOIN_NETWORK/admin.macaroon"
       NOSTR_PRIVKEY: "768c10a096ee248d485868458068ea17e8c8ccc9665a9e5e942924c11a598e9e"
       COOKIE_SECRET: "666"
     restart: on-failure
     stop_grace_period: 1m
-    volumes:
-      - ./tmp:/home/umbrel/umbrel/tmp
 
