--- a/believethehype-wallet-connect/docker-compose.yml
+++ b/believethehype-wallet-connect/docker-compose.yml
@@ -11,8 +11,7 @@ services:
     image: ghcr.io/believethehype/nostr-wallet-connect:lnbits-support-8ac1d68
     init: true
     volumes:
-      - ${APP_DATA_DIR}/data:/data
-      - ${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
+      - ${APP_LIGHTNING_NODE_DATA_DIR}:/root/.lnd:ro
     environment:
       RELAY: "wss://relay.damus.io"
       LN_BACKEND_TYPE: "LND"
