--- a/believethehype-wallet-connect/umbrel-app.yml
+++ b/believethehype-wallet-connect/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: believethehype-wallet-connect
 name: NostrWalletConnect
 tagline: Connect your Node to Nostr Wallet Connect
-icon: https://svgshare.com/i/rf3.svg
+icon: https://svgshare.com/i/sVp.svg
 category: Social
 version: "0.0.4"
 port: 58001
@@ -22,7 +22,7 @@ gallery:
   - https://i.imgur.com/YFjcPPz.png
   - https://i.imgur.com/nn1c3Lv.png
 releaseNotes: >-
-  Alpha Test for Umbrel Port of Wallet-Connect by Alby, now with Albys UI
+ Updated to latest Version, added LNBits support again.
 dependencies:
   - lightning
 path: ""
