--- a/believethehype-wallet-connect/docker-compose.yml
+++ b/believethehype-wallet-connect/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_ADD: "false"
 
   server:
-    image: ghcr.io/believethehype/nostr-wallet-connect:rpi-docker-543b30e
+    image: ghcr.io/believethehype/nostr-wallet-connect:release-8e076cc
     init: true
     volumes:
       - ${APP_DATA_DIR}/data:/data
