--- a/believethehype-lnbits/docker-compose.yml
+++ b/believethehype-lnbits/docker-compose.yml
@@ -4,11 +4,12 @@ services:
   app_proxy:
     environment:
       APP_HOST: believethehype-lnbits_web_1
-      APP_PORT: 3007
+      APP_PORT: 3008
       PROXY_AUTH_ADD: "false"
+      PROXY_TRUST_UPSTREAM: "true"
   
   web:
-    image: lnbitsdocker/lnbits-legend:0.9.5.2
+    image:  lnbitsdocker/lnbits-legend:0.9.4@sha256:0dbcc5ad5c5d4439c4ee5148206ecd3fbc28422aec2847a3f17e968205dab68b
     init: true
     restart: on-failure
     stop_grace_period: 1m
@@ -18,7 +19,7 @@ services:
     environment:
       # Global
       LNBITS_HOST: "0.0.0.0"
-      LNBITS_PORT: 3007
+      LNBITS_PORT: 3008
       LNBITS_DATA_FOLDER: "/data"
 
       # LND
