--- a/believethehype-wallet-connect/docker-compose.yml
+++ b/believethehype-wallet-connect/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_ADD: "false"
 
   server:
-    image: ghcr.io/believethehype/nostr-wallet-connect:release-ef3e1af
+    image: ghcr.io/believethehype/nostr-wallet-connect:main-655e736
     init: true
     volumes:
       - ${APP_DATA_DIR}/data:/data
