--- a/believethehype-wallet-connect/umbrel-app.yml
+++ b/believethehype-wallet-connect/umbrel-app.yml
@@ -4,7 +4,7 @@ name: NostrWalletConnect
 tagline: Connect your Node to Nostr Wallet Connect
 icon: https://svgshare.com/i/ub0.svg
 category: Social
-version: "0.1.4"
+version: "0.1.5"
 port: 58001
 description: >-
   Connect your LND node with Nostr.
@@ -23,7 +23,9 @@ gallery:
   - https://i.imgur.com/YFjcPPz.png
   - https://i.imgur.com/nn1c3Lv.png
 releaseNotes: >-
- Updated to latest Version of Albys NWC, but added LNBits support. Get Balance, create Invoice from Lnbits supported
+ Updated to latest Version of Albys NWC, but added LNBits support. 
+ Get Balance, create Invoice from LNBits supported
+ fixes Budgets with LNBits
 
  -
 dependencies:
